# neuronika

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  porco.py
.circleci/: config.yml
examples/: quickstart.rs  simple.rs
neuronika-core/: Cargo.toml
neuronika-core/src/: lib.rs
neuronika-data/: Cargo.toml
neuronika-data/src/: lib.rs  test.rs
neuronika-nn/: Cargo.toml
neuronika-nn/src/: init.rs  lib.rs
neuronika-optim/: Cargo.toml
neuronika-optim/src/: lib.rs  penalty.rs
neuronika-optim/src/adagrad/: mod.rs  test.rs
neuronika-optim/src/adam/: mod.rs  test.rs
neuronika-optim/src/amsgrad/: mod.rs  test.rs
neuronika-optim/src/lr_scheduler/exponential_lr/: mod.rs  test.rs
neuronika-optim/src/lr_scheduler/lambda_lr/: mod.rs  test.rs
neuronika-optim/src/lr_scheduler/multi_step_lr/: mod.rs  test.rs
neuronika-optim/src/lr_scheduler/multiplicative_lr/: mod.rs  test.rs
neuronika-optim/src/lr_scheduler/step_lr/: mod.rs  test.rs
neuronika-optim/src/rmsprop/: mod.rs  test.rs
neuronika-optim/src/sgd/: mod.rs  test.rs
neuronika-variable/: Cargo.toml
neuronika-variable/src/: autograd.rs  gradient.rs  history.rs  lib.rs  test.rs  utils.rs  var.rs  vardiff.rs
neuronika-variable/src/cuda/: cuarray.rs  cuvar.rs  device.rs  mod.rs
neuronika-variable/src/cuda/cunode/: mod.rs
neuronika-variable/src/cuda/cunode/binary_op/: mod.rs
neuronika-variable/src/node/: mod.rs
neuronika-variable/src/node/absolute_error/: mod.rs  test.rs
neuronika-variable/src/node/addition/: mod.rs  test.rs
neuronika-variable/src/node/bce/: mod.rs  test.rs
neuronika-variable/src/node/bce_with_logits/: mod.rs
neuronika-variable/src/node/chunk/: mod.rs  test.rs
neuronika-variable/src/node/concatenate/: mod.rs  test.rs
neuronika-variable/src/node/convolution/: mod.rs  test.rs
neuronika-variable/src/node/division/: mod.rs  test.rs
neuronika-variable/src/node/dropout/: mod.rs  test.rs
neuronika-variable/src/node/exp/: mod.rs  test.rs
neuronika-variable/src/node/kldiv/: mod.rs  test.rs
neuronika-variable/src/node/leaky_relu/: mod.rs  test.rs
neuronika-variable/src/node/logn/: mod.rs  test.rs
neuronika-variable/src/node/logsoftmax/: mod.rs
neuronika-variable/src/node/matrix_matrix_mul/: mod.rs  test.rs
neuronika-variable/src/node/matrix_matrix_mul_t/: mod.rs
neuronika-variable/src/node/matrix_vector_mul/: mod.rs
neuronika-variable/src/node/mean/: mod.rs
neuronika-variable/src/node/multi_concatenate/: mod.rs  test.rs
neuronika-variable/src/node/multi_stack/: mod.rs
neuronika-variable/src/node/multiplication/: mod.rs  test.rs
neuronika-variable/src/node/negation/: mod.rs
neuronika-variable/src/node/nll/: mod.rs  test.rs
neuronika-variable/src/node/pad/: mod.rs  padding_mode.rs
neuronika-variable/src/node/pad/constant/: mod.rs
neuronika-variable/src/node/pad/reflective/: test.rs
neuronika-variable/src/node/pad/replicative/: test.rs
neuronika-variable/src/node/power/: mod.rs
neuronika-variable/src/node/relu/: mod.rs  test.rs
neuronika-variable/src/node/sigmoid/: mod.rs
neuronika-variable/src/node/softmax/: mod.rs  test.rs
neuronika-variable/src/node/softplus/: mod.rs
neuronika-variable/src/node/sqrt/: mod.rs
neuronika-variable/src/node/squared_error/: mod.rs
neuronika-variable/src/node/stack/: mod.rs
neuronika-variable/src/node/subtraction/: mod.rs  test.rs
neuronika-variable/src/node/sum/: mod.rs
neuronika-variable/src/node/tanh/: mod.rs  test.rs
neuronika-variable/src/node/transpose/: mod.rs  test.rs
neuronika-variable/src/node/unsqueeze/: mod.rs
neuronika-variable/src/node/vector_matrix_mul/: mod.rs
neuronika-variable/src/node/vector_vector_mul/: mod.rs  test.rs
src/: lib.rs
src/data/: mod.rs  test.rs
src/data_loading/: mod.rs
src/graph/: mod.rs  node.rs  ops.rs  parameters.rs
src/graph/node/: backward.rs  forward.rs  mod.rs
src/graph/numeric/: mod.rs  tests.rs
src/model_selection/: kfold.rs  mod.rs
src/nn/: convolution.rs  init.rs  loss.rs  mod.rs  utils.rs
src/optim/: adagrad.rs  adam.rs  amsgrad.rs  mod.rs  optimizer.rs  rmsprop.rs  scheduler.rs  sgd.rs
src/optim/adagrad/: mod.rs  test.rs
src/optim/adam/: mod.rs  test.rs
src/optim/amsgrad/: mod.rs  test.rs
src/optim/lr_scheduler/: exponential_lr.rs  lambda_lr.rs  mod.rs  multi_step_lr.rs  multiplicative_lr.rs  step_lr.rs  test.rs
src/optim/lr_scheduler/exponential_lr/: mod.rs  test.rs
src/optim/lr_scheduler/lambda_lr/: mod.rs  test.rs
src/optim/lr_scheduler/multi_step_lr/: mod.rs  test.rs
src/optim/lr_scheduler/multiplicative_lr/: mod.rs  test.rs
src/optim/lr_scheduler/step_lr/: mod.rs  test.rs
src/optim/rmsprop/: mod.rs  test.rs
src/optim/sgd/: mod.rs  test.rs
src/var/: mod.rs  ops.rs  reprs.rs
src/var/numeric/: mod.rs  tests.rs
src/variable/: gradient.rs  history.rs  mod.rs  parameters.rs  serde.rs  test.rs  utils.rs  var.rs  vardiff.rs
src/variable/node/: backward.rs  forward.rs  gradient.rs  input.rs  mod.rs  utils.rs
src/variable/node/absolute_error/: mod.rs
src/variable/node/addition/: mod.rs  test.rs
src/variable/node/bce/: mod.rs
src/variable/node/bce_loss/: mod.rs
src/variable/node/bce_with_logits/: mod.rs  test.rs
src/variable/node/bce_with_logits_loss/: mod.rs
src/variable/node/binary/: mod.rs  (+2 more)
tests/: gradients_tests.rs
(+228 files in other folders)
