[package]
name        = "neuronika"
version     = "0.2.0"
authors     = ["Francesco Iannelli \"frjnn\"", "Stefano Pacchini \"ste-pac\""]
description = "Tensors and dynamic neural networks."
keywords    = ["deep-learning", "auto-differentiation", "machine-learning", "tensors"]
edition     = "2021"
license     = "MPL-2.0"
repository  = "https://github.com/neuronika/neuronika"
exclude     = ["misc/*"]

[dependencies]
csv          = "1.1.6"
itertools    = "0.10.3"
ndarray      = {version = "0.15.4", features = ["rayon"]}
ndarray-rand = "0.14.0"
rand         = "0.8.4"
rand_distr   = "0.4.2"
rayon        = "1.5.1"
serde        = {version = "1.0.130", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0.72"

[[example]]
name              = "quickstart"
required-features = ["serialize"]

[features]
blas                     = ["ndarray/blas"]
matrixmultiply-threading = ["ndarray/matrixmultiply-threading"]
serialize                = ["ndarray/serde"]
