[package]
authors = ["Francesco Iannelli \"frjnn\"", "Stefano Pacchini \"ste-pac\""]
description = "Tensors and dynamic neural networks."
edition = "2021"
exclude = ["misc/*"]
keywords = ["deep-learning", "auto-differentiation", "machine-learning", "tensors"]
license = "MIT OR Apache-2.0"
name = "neuronika"
repository = "https://github.com/neuronika/neuronika"
version = "0.2.0"

[workspace]
members = [
  "neuronika-variable",
  "neuronika-nn",
  "neuronika-optim",
  "neuronika-data",
  "neuronika-core",
]

[features]
blas = ["neuronika-variable/blas"]
cuda = ["neuronika-variable/cuda"]
matrixmultiply-threading = ["neuronika-variable/matrixmultiply-threading"]
serialize = ["neuronika-variable/serialize"]

[dependencies]
neuronika-core = {version = "*", path = "./neuronika-core"}
neuronika-data = {version = "*", path = "./neuronika-data"}
neuronika-nn = {version = "*", path = "./neuronika-nn"}
neuronika-optim = {version = "*", path = "./neuronika-optim"}
neuronika-variable = {version = "*", path = "./neuronika-variable"}

[dev-dependencies]
serde_json = "1.0.72"

[[example]]
name = "quickstart"
required-features = ["serialize"]
